--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 
 .ipcache/
 .run/
+_x/
+_x.hw_emu.xilinx_u250_gen3x16_xdma_4_1_202210_1/
+_x.hw.xilinx_u250_gen3x16_xdma_4_1_202210_1/
+_x.sw_emu.xilinx_u250_gen3x16_xdma_4_1_202210_1/
+build_dir.hw_emu.xilinx_u250_gen3x16_xdma_4_1_202210_1/
+build_dir.hw.xilinx_u250_gen3x16_xdma_4_1_202210_1/
+build_dir.sw_emu.xilinx_u250_gen3x16_xdma_4_1_202210_1/
