--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,16 @@
 [connectivity]
 #This setting allows all three buffers to use seperate HBM banks. 
-sp=krnl_1.input:DDR[0]
-sp=krnl_1.output:DDR[1]
+sp=load_1.input:DDR[0]
+
+sc=load_1.output:krnl_1.input
+
+
+
+sc=krnl_1.outp1:store_1.outp1
+sc=krnl_1.outp2:store_1.outp2
+sc=krnl_1.outp3:store_1.outp3
+
+sp=store_1.output1:DDR[1]
+sp=store_1.output2:DDR[1]
+sp=store_1.output3:DDR[1]
 
