--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 [connectivity]
 #This setting allows all three buffers to use seperate HBM banks. 
-sp=load_1.input:DDR[0]
+sp=load_1.input:HBM[0]
 
 sc=load_1.output:krnl_1.input
 
@@ -9,8 +9,47 @@ sc=load_1.output:krnl_1.input
 sc=krnl_1.outp1:store_1.outp1
 sc=krnl_1.outp2:store_1.outp2
 sc=krnl_1.outp3:store_1.outp3
+sc=krnl_1.outp4:store_1.outp4
+sc=krnl_1.outp5:store_1.outp5
+sc=krnl_1.outp6:store_1.outp6
+sc=krnl_1.outp7:store_1.outp7
+sc=krnl_1.outp8:store_1.outp8
+sc=krnl_1.outp9:store_1.outp9
+sc=krnl_1.outp10:store_1.outp10
+sc=krnl_1.outp11:store_1.outp11
+sc=krnl_1.outp12:store_1.outp12
+sc=krnl_1.outp13:store_1.outp13
+sc=krnl_1.outp14:store_1.outp14
+sc=krnl_1.outp15:store_1.outp15
+sc=krnl_1.outp16:store_1.outp16
+sc=krnl_1.outp17:store_1.outp17
+sc=krnl_1.outp18:store_1.outp18
+sc=krnl_1.outp19:store_1.outp19
+sc=krnl_1.outp20:store_1.outp20
+sc=krnl_1.outp21:store_1.outp21
+sc=krnl_1.outp22:store_1.outp22
 
-sp=store_1.output1:DDR[1]
-sp=store_1.output2:DDR[1]
-sp=store_1.output3:DDR[1]
+sp=store_1.output1:HBM[1]
+sp=store_1.output2:HBM[2]
+sp=store_1.output3:HBM[3]
+sp=store_1.output4:HBM[4]
+sp=store_1.output5:HBM[5]
+sp=store_1.output6:HBM[6]
+sp=store_1.output7:HBM[7]
+sp=store_1.output8:HBM[8]
+sp=store_1.output9:HBM[9]
+sp=store_1.output10:HBM[10]
+sp=store_1.output11:HBM[11]
+sp=store_1.output12:HBM[12]
+sp=store_1.output13:HBM[13]
+sp=store_1.output14:HBM[14]
+sp=store_1.output15:HBM[15]
+sp=store_1.output16:HBM[16]
+sp=store_1.output17:HBM[17]
+sp=store_1.output18:HBM[18]
+sp=store_1.output19:HBM[19]
+sp=store_1.output20:HBM[20]
+sp=store_1.output21:HBM[21]
+sp=store_1.output22:HBM[22]
+
 
